add markdown comments to section 'Fréquence des mots sur designation et text'

--- a/notebooks/data-exploration.ipynb
+++ b/notebooks/data-exploration.ipynb
@@ -1434,10 +1434,11 @@
         "id": "j0aLsGfENAfN"
       },
       "source": [
-        "Ajouter la colonne mots_texte contenant les mots de la colonne texte\n",
-        "Suppression des stopwords français et anglais, des chiffres et des mots de 1 ou 2 lettres\n",
+        "Une façon d'approfondir notre analyse des données consiste à observer la fréquence des mots contenus dans les variables textuelles.\n",
         "\n",
-        "TODO: expliquer pourquoi on fait ça"
+        "Ajoutons deux colonnes **mots_designation** et **mots_text** qui vont contenir la liste des mots extraits depuis leur colonne respective **designation** et **text**. Etudier séparemment chacune de ces colonnes devrait nous permettre de souligner les différences entre la fréquence globale des mots et celle de **designation**.\n",
+        "\n",
+        "On procède à l'extraction des mots par une *tokenization maison* à base d'expression régulières tout en étant vigilant à exclure les mots qui apportent peu d'informations à notre analyse fréquentielle.  "
       ]
     },
     {
@@ -1479,7 +1480,9 @@
         "id": "L89O2-FgQwfu"
       },
       "source": [
-        "TODO: expliquer"
+        "L'extraction s'est bien déroulée, on constate l'apparition des deux nouvelles colonnes **mots_designation** et **mots_text**.\n",
+        "\n",
+        "On peut désormais afficher un premier nuage de mots qui représente la fréquence des mots contenus dans **designation**"
       ]
     },
     {
@@ -1509,7 +1512,9 @@
         "id": "KJyidN4KRfxT"
       },
       "source": [
-        "TODO: commenter"
+        "On observe une nette prédominance des mots français en accord avec nos observations sur la répartition des langues. On a peine à distinguer quelques mots d'anglais en arrière plan.\n",
+        "\n",
+        "Quelques mots se distinguent clairement: lot, noir, piscine. A ce stade on peut s'interroger sur une possible correspondance entre fréquence d'un mot et appartenance à une catégorie de produit. Nous aurons l'occasion de creuser la question lorsqu'on affichera les fréquences de mots par catégories."
       ]
     },
     {
@@ -1518,7 +1523,7 @@
         "id": "p0h0sUg7RlgX"
       },
       "source": [
-        "TODO: expliquer"
+        "Examinons maintenant la fréquence globale des mots, c'est à dire la fréquence des mots contenus dans la variable **text**, qui pour rappel est issue de la concaténation de **designation** et **description**"
       ]
     },
     {
@@ -1548,7 +1553,9 @@
         "id": "UI5SNFv1RjU7"
       },
       "source": [
-        "TODO: commenter"
+        "La prédominance du français est encore plus nette. Les rares mots anglais qu'on pouvait encore distinguer sont probablement encore plus en arrière plan. On constate aussi que hormis *lot*, les mots les plus identiables ont changés. C'est plutôt rassurant car ça signifie que le champ **description** apporte une information qui n'est pas redondante par rapport au champ **designation**.\n",
+        "\n",
+        "Plusieurs mots en évidence ont une consonnance plutôt marketing que descriptive. Notamment *neuf*, *haute*, *qualité*. C'est attendu dans du texte destiné à inciter à la vente de produits."
       ]
     },
     {
@@ -1870,7 +1877,8 @@
       "collapsed_sections": [
         "IOdUnOfdun02"
       ],
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
