explanations + comments in section 'Fréquence des mots dans le texte pour chaque catégorie'

--- a/notebooks/data-exploration.ipynb
+++ b/notebooks/data-exploration.ipynb
@@ -1573,7 +1573,9 @@
         "id": "HFNxybS9R4GN"
       },
       "source": [
-        "TODO: expliquer"
+        "Penchons nous maintenant sur la fréquence des mots au sein de chaque catégorie. On voudrait afficher pour chaque catégorie la fréquence des 10 mots les plus courants.\n",
+        "\n",
+        "Pour cela, on crée un DataFrame **df_plot** qui contient trois colonnes: **categorie**, **word** et **count**. Ce DataFrame aura donc 10 lignes par catégorie, chaque ligne correspondant à un des 10 mots les plus fréquent."
       ]
     },
     {
@@ -1617,19 +1619,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6lVTXimqR7Sp"
-      },
-      "source": [
-        "TODO: commenter"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "g0VUMyE1SSDj"
       },
       "source": [
-        "TODO: expliquer"
+        "On peut maintenant utiliser **df_plot** pour afficher un ensemble de graphique en barre (un par catégorie) qui vont représenter les occurences des dix mots les plus courants dans leur catégorie respective"
       ]
     },
     {
@@ -1675,19 +1668,25 @@
         "id": "5XRtK2KcSX7w"
       },
       "source": [
-        "TODO: interpreter"
+        "Bien que la plupart des catégories aient des mots qui reflètent leur themes, on constate fréquement que des mots génériques tel que *peut*, *plus*, *être*, *cette* apparaissent dans le top 10. Ces mots ont probablement echappés à liste des stop words censée les filter. Il n'apportent pas d'information sur la catégorie.\n",
+        "\n",
+        "D'autres termes typiques d'un vocabulaire produit sont notables tel que *dimension*, *taille*, *longueur*.  Eux non plus ne devrait pas aider à la classification.\n",
+        "\n",
+        "Enfin, on retrouve les mots classiques du marketing de vente qu'on avait déjà repéré: *haute*, *qualité*, *facile*.\n",
+        "\n",
+        "Si comme on le suppose, ces mots ne contribuent pas à la variance expliquée entre les classes de produits, il devraient être filtré naturellement lors de la phase de selection de features d'une reduction de dimension efficace.\n",
+        "\n",
+        "On note aussi certaines catégorie particulières comme **livre neuf** dont les mots ne reflètent pas la nature. On dirait plutôt que les mots qui ressortent sont ceux des titres les plus vendus. Curieusement la catégorie **livre occasion** de partage pas cette caractèristique puisque son vocable correspond bien au monde de l'édition\n"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "Woagl0S6SaRG"
-      },
       "source": [
-        "TODO: expliquer\n",
-        "\n",
-        "TODO: ameliorer tqdm qui n'affiche pas le nombre totale d'iterations"
-      ]
+        "Affichons maintenant les nuages de mots par catégorie. Celas nous fournira une vision plus exaustive qu'un top 10."
+      ],
+      "metadata": {
+        "id": "O0Kh_zG9_j5E"
+      }
     },
     {
       "cell_type": "code",
@@ -1697,6 +1696,7 @@
       },
       "outputs": [],
       "source": [
+        "#TODO: ameliorer tqdm qui n'affiche pas le nombre totale d'iterations\n",
         "\n",
         "# Création de subplots pour les nuages de mots (3 colonnes x 9 lignes)\n",
         "fig, axes = plt.subplots(9, 3, figsize=(15, 45))\n",
@@ -1728,7 +1728,11 @@
         "id": "E260xoslUVnL"
       },
       "source": [
-        "TODO: interpreter"
+        "Bien sûr les mots qu'on avait repéré dans le top 10 sont ici mis en évidence. Cette représentation permet toutefois de répérer certains mots plus en arrière plan qui n'apparaissaient pas sur le graphique précédent.\n",
+        "\n",
+        "Pour reprendre notre exemple de **livre neuf**, on observe la présence en retrait de quelques mots plus proche de l'édition tel que: *livre*, *ouvrage*, *tome*.\n",
+        "\n",
+        "Ca sougligne une fois de plus l'importance qu'aura un bon process de séléction de features qui devra écarter les features les plus évidentes au profit de de feature plus explicatives."
       ]
     },
     {
@@ -1877,8 +1881,7 @@
       "collapsed_sections": [
         "IOdUnOfdun02"
       ],
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
