compléter la section Interêts du projet Ajouter un résumé de mon profil dans la section "Equipe" TODO: vérifier pourquoi parfois nl passe au dessus des 1% et parfois en dessous ?

--- a/notebooks/data-exploration.ipynb
+++ b/notebooks/data-exploration.ipynb
@@ -80,16 +80,27 @@
         "id": "XARbrUHP-Oxq"
       },
       "source": [
-        "## Interêts du projet TODO\n",
+        "## Interêts du projet\n",
         "\n",
-        "* Pédagogique\n",
-        "  * Computer vision\n",
-        "  * NLP\n",
-        "  * Modèles multimodaux\n",
-        "* Commerciale\n",
-        "  * Classification automatique de produit: Ex: Lors de la mise en vente d'un produit sur un site e-commerce, pouvoir proposer (ou imposer ?) au vendeur un type de produit en montrant des exemples de produits du même type\n",
-        "  * faciliter les recherches de produits en séléctionnat une catgéorie\n",
-        "* Scientifiques: ??"
+        "Etant réalisé dans le cadre de le formation datascientest, ça va aussi être l'opportunité pour nous de découvrir et mettre en applications des techniques de machine learning avancées telle que:\n",
+        "\n",
+        "* Computer vision\n",
+        "  * réseaux de neurones convolutifs\n",
+        "* NLP\n",
+        "* Modèles multimodaux\n",
+        "* deep learning\n",
+        "\n",
+        "Bien que ce projet utilise le dataset d'un site de vente, il est assez générique de par la nature de son sujet qui pourrait se résumer ainsi: Attribuer une classe à un objet à partir d'un description textuelle et d'une image. On pourrait imaginer toutes sortes de declinaisons:\n",
+        "\n",
+        "* Commerciales\n",
+        "  * Classification automatique de produits mis en vente sur un site de e-commerce (le but original du challenge).\n",
+        "    * Assister un utilisateur dans le choix d'une catégorie lors de la mise en vente de son produit. Quand on connait le grand nombre de catégories typiquement proposées sur les site de e-commerce, on peut imaginer la confusion des utilisateurs.\n",
+        "    * On pourrait même imaginer un système plus coercitif qui impose une catégorie en fonction du contenu pour éviter les erreurs de catégorisation.\n",
+        "    * Fournir une recherche intelligente des produits qui puisse automatiquement traduire un description de produit entrée en classe de produits et ainsi produire des resultats pertinents.   \n",
+        "* Génériques\n",
+        "  * Un moteur de recherche d'objets à partir de description ou même d'images.\n",
+        "  * Moteur de recherche d'image à partir d'une description et reciproquement (si les modèles individuels de nlp et de computer vision sont suffisamment performant)\n",
+        "\n"
       ]
     },
     {
@@ -98,9 +109,12 @@
         "id": "WCka46UC-RII"
       },
       "source": [
-        "## Equipe TODO\n",
+        "## Equipe\n",
         "\n",
-        "* Pas d'experience dans des projets de ce type. Tout à apprendre..\n"
+        "* Mathis Poignet: TODO\n",
+        "* Karim Hadjar: TODO\n",
+        "* Julien Noel du Payrat ([GitHub](https://github.com/surfncode) / [LinkedIn](https://www.linkedin.com/in/julien-noel-du-payrat-01854558))\n",
+        "  * J'ai un background de développeur depuis plus de 15 ans en revanche je fais encore mes armes en datascience. Malgré une curiosité naturelle pour ce domaine, c'est quelque chose que j'ai découvert à la formation.\n"
       ]
     },
     {
@@ -1338,7 +1352,7 @@
         "\n",
         "La répartition parmis ces trois langues est également hétéroclite puisque le français compte déja pour plus de 75% suivi de très loins par l'anglais qui compte pour 5 fois moins et enfin de l'allemand représentant à peu prés 1/3 du contenu anglais.\n",
         "\n",
-        "Pour se faire un idée plus juste des proportions. Observons la répartition des langues sur un camembert. On considérera que les langues représentant 1% ou moins du contenu peuvent être relèguées dans une catégorie autre afin de ne pas nuire à la lisibilité du graphique."
+        "Pour se faire un idée plus juste des proportions. Observons la répartition des langues sur un camembert. On considérera que les langues qui ne font pas parties d'une des trois plus fréquentes peuvent être relèguées dans une catégorie autre afin de ne pas nuire à la lisibilité du graphique."
       ]
     },
     {
@@ -1349,27 +1363,15 @@
       },
       "outputs": [],
       "source": [
-        "# Calculer le nombre de contenus par langue\n",
-        "comptes_langues = pd.DataFrame(df['lang'].value_counts()).reset_index()\n",
-        "comptes_langues.columns = ['langue', 'nombre']\n",
-        "# Calcul du total\n",
-        "total = comptes_langues['nombre'].sum()\n",
-        "\n",
-        "# Calcul des pourcentages\n",
-        "comptes_langues['pourcentage'] = (comptes_langues['nombre'] / total) * 100\n",
-        "\n",
-        "# Séparer les catégories principales et \"Others\"\n",
-        "seuil = 1  # 1% pour être inclus dans les catégories principales\n",
-        "# TODO: vérifier pourquoi parfois nl passe au dessus des 1% et parfois en dessous ?\n",
-        "categories_principales = comptes_langues[comptes_langues['pourcentage'] > seuil]\n",
-        "categories_others = comptes_langues[comptes_langues['pourcentage'] <= seuil]\n",
-        "others = pd.DataFrame(data = {'langue': ['Others'], 'nombre': [categories_others['nombre'].sum()]})\n",
-        "\n",
-        "# Concaténer les catégories principales avec \"Others\"\n",
-        "resultat_final = pd.concat([categories_principales, others])\n",
+        "lang_simple = df['lang']\n",
+        "# On obtients la liste des langues minoritaires en excluant les trois\n",
+        "# majoritaires puis on les remplace par \"other\" pour ne pas surcharger le graph\n",
+        "other_langs = df['lang'].value_counts().index[3:]\n",
+        "lang_simple = lang_simple.replace(other_langs,\"other\")\n",
+        "lang_counts = lang_simple.value_counts()\n",
         "\n",
         "# Créer le diagramme en camembert avec Plotly\n",
-        "fig = go.Figure(data=[go.Pie(labels=resultat_final['langue'], values=resultat_final['nombre'])])\n",
+        "fig = go.Figure(data=[go.Pie(labels=lang_counts.index, values=lang_counts.values)])\n",
         "fig.show()"
       ]
     },
@@ -1379,9 +1381,7 @@
         "id": "_ygwIlOOPc5A"
       },
       "source": [
-        "On retrouve d'une façon plus explicite les chiffres qu'on a vu sur le graphique en barres. Le français en tête avec 76% suivi de l'anglais comptant pour 15% puis de l'allemand avec 4%.\n",
-        "\n",
-        "On remarque également que la proportion d'allemand est similaire à celle du cumul des langues restantes placées dans la catégorie autre.\n",
+        "On retrouve d'une façon plus explicite les chiffres qu'on a vu sur le graphique en barres. Le français en tête avec 77% suivi de l'anglais comptant pour 15% puis de l'allemand avec 3%. Quant au cumul des autres langues, il atteint à peine 5%.\n",
         "\n",
         "La plupart des modèles ne NLP fonctionnent avec l'anglais. Bien qu'il y ait des versions adaptées pour le français, ça reste des modèles différents. Admettons qu'on veuille résoudre ce problème de classification pour le français et l'anglais séparemment en omettant les autres langues minoritaires, ça pourrait impliquer de doubler la charge de travail.\n",
         "\n",
@@ -1391,11 +1391,7 @@
     {
       "cell_type": "code",
       "source": [
-        "lang_simple = df['lang']\n",
-        "# On obtients la liste des langues minoritaires en excluant les trois\n",
-        "# majoritaires puis on les remplace par \"other\" pour ne pas surchager le graph\n",
-        "other_langs = df['lang'].value_counts().index[3:]\n",
-        "lang_simple = lang_simple.replace(other_langs,\"other\")\n",
+        "\n",
         "\n",
         "plt.figure(figsize=(12,12))\n",
         "sns.displot(y=df['categorie'],hue=lang_simple,multiple=\"stack\",aspect=1.7,binwidth=2)\n",
@@ -1868,6 +1864,13 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "M5MMuXXzIK0X"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "jRg2_PeEQMV_"
       },
@@ -1879,7 +1882,8 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [
-        "IOdUnOfdun02"
+        "IOdUnOfdun02",
+        "n43e89YxMSzr"
       ],
       "provenance": []
     },
