make local run of notebook (with jupyter extension on vscode) work + check still working on colab with new folder nov23_bds_rakuten created on drive

--- a/notebooks/data-exploration.ipynb
+++ b/notebooks/data-exploration.ipynb
@@ -144,9 +144,18 @@
       },
       "outputs": [],
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive/', force_remount=True)\n",
-        "%cd drive/MyDrive/Projet_Rakuten"
+        "import sys\n",
+        "import os\n",
+        "if 'google.colab' in sys.modules:\n",
+        "    from google.colab import drive\n",
+        "    drive.mount('/content/drive/', force_remount=True)\n",
+        "    %cd drive/MyDrive/nov23_bds_rakuten\n",
+        "else:\n",
+        "    root_files = os.listdir()\n",
+        "    if not \"requirements.txt\" in root_files:\n",
+        "        print(\"The jupyter server root should be set to root of git project\")\n",
+        "        print(\"If you're on vscode add the following to your settings.json file\")\n",
+        "        print('\"jupyter.notebookFileRoot\": \"${workspaceFolder}\"')"
       ]
     },
     {
@@ -217,7 +226,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install langdetect"
+        "%pip install langdetect"
       ]
     },
     {
@@ -283,7 +292,7 @@
       },
       "outputs": [],
       "source": [
-        "X = pd.read_csv('Datasets/X_train.csv', index_col=0)\n",
+        "X = pd.read_csv('data/X_train.csv', index_col=0)\n",
         "X.head(10)"
       ]
     },
@@ -325,7 +334,7 @@
       },
       "outputs": [],
       "source": [
-        "Y = pd.read_csv(\"Datasets/Y_train.csv\",index_col=0)\n",
+        "Y = pd.read_csv(\"data/Y_train.csv\",index_col=0)\n",
         "display(Y.head(10))\n",
         "\n",
         "display(Y.info())"
@@ -1172,7 +1181,7 @@
         "if 'lang_prob' in df.columns:\n",
         "  df.drop(['lang_prob'],axis=1,inplace=True)\n",
         "\n",
-        "output_dir = \"Output/data-exploration\"\n",
+        "output_dir = \"output/data-exploration\"\n",
         "lang_file_path = output_dir + \"/lang.csv\"\n",
         "lang_file = Path(lang_file_path)\n",
         "if lang_file.exists():\n",
@@ -1749,7 +1758,7 @@
       "outputs": [],
       "source": [
         "# Génération du nuage de mots\n",
-        "image = plt.imread('Assets/Images/SuperNES.jpg')\n",
+        "image = plt.imread('assets/images/SuperNES.jpg')\n",
         "\n",
         "categorie_specifique = 'Console de jeu'\n",
         "\n",
@@ -1775,7 +1784,7 @@
       "outputs": [],
       "source": [
         "# Génération du nuage de mots\n",
-        "image = plt.imread('Assets/Images/manette_xbox.jpg')\n",
+        "image = plt.imread('assets/images/manette_xbox.jpg')\n",
         "\n",
         "categorie_specifique = 'Jeu occasion'\n",
         "\n",
@@ -1892,7 +1901,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.18"
     }
   },
   "nbformat": 4,
