save X_train_pre.csv at the end of notebook + few corrections

--- a/notebooks/data-exploration.ipynb
+++ b/notebooks/data-exploration.ipynb
@@ -492,7 +492,7 @@
         "id": "fgS-n5g_aVvS"
       },
       "source": [
-        "1294 produits, bien qu'ayant des productid, ont des couples **designation**, **description** communs.\n",
+        "1294 produits, bien qu'ayant des productid distincts, ont des couples **designation**, **description** communs.\n",
         "\n",
         "On peut donc obtenir maintenant le compte réel des doublons pour les colonnes traitées séparément."
       ]
@@ -620,7 +620,7 @@
         "id": "papLSTw2unN7"
       },
       "source": [
-        "On pourrait donc décider de supprimer les doublons sans casser la répartition initiale. Mais est-ce gênant de les garder? (TODO)"
+        "On pourrait donc décider de supprimer les doublons sans casser la répartition initiale. Cependant, il faudrait pouvoir vérifier au préalable, que les images associées aux doublons de couple (**designation**,**description**) sont identiques. Etant donné le faible nombre de doublons (1294 pour rappel) et la charge de travail supplémentaire que leur suppression impliquerait, nous prenons le parti de les laisser pour le moment."
       ]
     },
     {
@@ -1844,13 +1844,69 @@
       "outputs": [],
       "source": [
         "# Conversion des colonnes 'imageid' et 'productid' en chaînes de caractères\n",
-        "df['imageid'] = df['imageid'].astype(str)\n",
-        "df['productid'] = df['productid'].astype(str)\n",
         "\n",
         "#Ajout colonne nom_fichier\n",
-        "df['nom_fichier'] = \"image_\" + df['imageid'] + \"_product_\" + df['productid'] + \".jpg\"\n",
+        "df['nom_fichier'] = \"image_\" + df['imageid'].astype(str) + \"_product_\" + df['productid'].astype(str)+ \".jpg\"\n",
         "\n",
-        "df.head()"
+        "df.info()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Enregistrement du fichier avec pre-processing"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Nous allons enregistrer le fichier avec les modifications effectuées au cours de ce notebook. C'est ce fichier qui nous servira pour la suite.\n",
+        "\n",
+        "Tout d'abord effectuons un peu de nettoyage des colonnes additionnelles que nous avons ajouté pour faciliter l'exporation des données."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df = df.drop(['nom_fichier','mots_text','mots_designation','categorie'],axis=1)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "C'est la variable **text** résultant de la concaténation de **designation** et **description** que nous allons utiliser dans les modélisations. On peut donc supprimer les variables d'origines."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df = df.drop(['designation','description'],axis=1)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Maintenant le fichier nettoyé, on peut l'enregistrer"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "Path(output_dir).mkdir(parents=True, exist_ok=True)\n",
+        "df.to_csv(output_dir + \"/X_train_pre.csv\")"
       ]
     },
     {
@@ -1865,17 +1921,13 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "n43e89YxMSzr"
+        "id": "M5MMuXXzIK0X"
       },
-      "source": [
-        "# TODO: sortir des chiffres (stats) pour compléter l'interpretation des graphs"
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "M5MMuXXzIK0X"
-      },
+      "metadata": {},
       "source": []
     },
     {
