fix spelling mistake

--- a/notebooks/data-exploration.ipynb
+++ b/notebooks/data-exploration.ipynb
@@ -1864,7 +1864,7 @@
       "source": [
         "Nous allons enregistrer le fichier avec les modifications effectuées au cours de ce notebook. C'est ce fichier qui nous servira pour la suite.\n",
         "\n",
-        "Tout d'abord effectuons un peu de nettoyage des colonnes additionnelles que nous avons ajouté pour faciliter l'exporation des données."
+        "Tout d'abord effectuons un peu de nettoyage des colonnes additionnelles que nous avons ajouté pour faciliter l'exploration des données."
       ]
     },
     {
