add more details about testing strategy in introduction

--- a/notebooks/data-modeling-images-1.ipynb
+++ b/notebooks/data-modeling-images-1.ipynb
@@ -14,6 +14,8 @@
       "source": [
         "L'objectif du notebook est de concevoir un premier modèle de classification d'images. On va utliser une architecture lenet pour commencer. C'est CNN simple qui va nous permettre de nous faire une première idée de la contribution des différents facteurs (data, hyper-paramètres) à la performance de notre modèle.\n",
         "\n",
+        "Nos ressources de calul (et de temps) étant limitées, on va mener les comparaisons de la section 1 (surtout) et 2 sur un sous-ensemble des données,un nombre d'époques limitées et certains hyperparamètres restreints.\n",
+        "\n",
         "On va adopter la stratégie suivante:\n",
         "\n",
         "1. Tenter d'abord de mesurer l'impact des différentes étapes de pre-processing sur nos modèles. Toutes choses égales par ailleurs, on va tester le même modèle avec dans l'ordre:\n",
@@ -21,8 +23,8 @@
         "  2. Le dataset sans ré-équilibrage de classes et avec les images zoomées\n",
         "  3. Le dataset avec ré-équilibrage de classes et avec les images zoomées\n",
         "2. Enfin, après avoir trouvé le dataset le plus approprié, on va tester l'impact de différents hyper-paramètres sur la performance\n",
-        "\n",
-        "Nos ressources de calul (et de temps) étant limitées, on va mener ces tests sur un sous-ensemble des données et sur un nombre d'époques limitées."
+        "3. On va séléctionner les hyper-paramètres les plus prometteurs de la section 2 et entrainer le modèle de façon plus poussée sur un dataset complet et en restaurant les hyper-paramètres qu'on avait restreints par soucis d'économie de temps lors de nos comparaisons\n",
+        "\n"
       ],
       "metadata": {
         "id": "xxhU-ngztuo3"
