add remark on learning rate decay in report

--- a/notebooks/data-modeling-images-1.ipynb
+++ b/notebooks/data-modeling-images-1.ipynb
@@ -192,7 +192,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Rapport des modéles"
+        "## Rapport de modéle"
       ],
       "metadata": {
         "id": "rPXQMK76FLpk"
@@ -1205,7 +1205,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 293
         },
         "id": "UOeJ5vZiywbf",
         "outputId": "e4674f6e-1aaf-4c9f-eedf-53f0f1f9c056"
@@ -2737,7 +2737,7 @@
         "id": "_BuEDL316zhc",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 487
+          "height": 481
         },
         "outputId": "e7e603d0-4e23-461f-d36a-f08a19f4a952"
       },
@@ -2866,7 +2866,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 716
+          "height": 634
         },
         "id": "YBf7Z4D8mrCQ",
         "outputId": "533954a4-c670-48b9-9f09-40738dc93a09"
@@ -3061,7 +3061,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 293
+          "height": 536
         },
         "outputId": "645f36e9-e425-4e77-ae26-c69def6680a6",
         "id": "hYdbxeaPmwCI"
@@ -4561,7 +4561,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 485
+          "height": 480
         },
         "outputId": "34f61903-09b1-4860-b896-8056565e0ec4",
         "id": "Id24ikfqmwCW"
@@ -4691,7 +4691,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 716
+          "height": 634
         },
         "outputId": "d73c78fb-1dfb-4e6f-b26e-abd9180eccec",
         "id": "P5pDTMm6mwCY"
@@ -4891,7 +4891,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 293
+          "height": 519
         },
         "outputId": "6e41b930-18f3-42d1-ffe5-24846db6ac7b",
         "id": "0DMC7WLw1iBt"
@@ -6426,7 +6426,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 485
+          "height": 480
         },
         "outputId": "29d36aa4-2ead-4ca8-f35c-87772e826755",
         "id": "OJKkCL8z1iB6"
@@ -6544,7 +6544,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 716
+          "height": 634
         },
         "outputId": "63a7d84b-facc-4e92-eab3-4ea9a958a152",
         "id": "dEJnXFyf1iB8"
@@ -6671,7 +6671,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 833
+          "height": 885
         },
         "id": "8M0konhg9GXV",
         "outputId": "158feab8-f294-44f7-ea5e-c9a22e183a59"
@@ -8020,6 +8020,7 @@
         "  update_reporting_line(model_id,{\n",
         "      \"start_lr\": start_lr,\n",
         "      \"optimizer\": \"adam\",\n",
+        "      \"remarks\": \"use learning_rate_decay with decay_factor=0.9 and decay_step=2\"\n",
         "  })\n",
         "\n",
         "model.summary()"
@@ -8309,7 +8310,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 485
+          "height": 483
         },
         "outputId": "34d75bf1-62e9-4e2e-cb69-d385eeb989d1",
         "id": "NqXkoRqZGX_r"
@@ -8439,7 +8440,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 716
+          "height": 630
         },
         "outputId": "5219051b-ae8c-474c-9687-ec1eeccd0a9c",
         "id": "DR5MrV-8GX_s"
@@ -9664,7 +9665,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 485
+          "height": 483
         },
         "outputId": "10332613-70f9-4501-c951-6ee80e7e0ce5",
         "id": "yp7_vTLQModf"
@@ -9782,7 +9783,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 716
+          "height": 634
         },
         "outputId": "bf12a1a1-a4e4-4109-9871-08fe99500c69",
         "id": "WKr1v-7CModh"
@@ -11005,7 +11006,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 485
+          "height": 483
         },
         "outputId": "02c8bcf7-7a35-40d3-ec75-2b48529141e7",
         "id": "uYnvH5wfQ4zp"
@@ -11123,7 +11124,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 716
+          "height": 634
         },
         "outputId": "59e9919e-cf43-4c3a-e14b-566c7074a145",
         "id": "UY-YTw8vQ4zq"
@@ -11250,7 +11251,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 833
+          "height": 885
         },
         "id": "MgVBq2BBSavs",
         "outputId": "27b27d12-d63e-46be-adc6-cddca6f11170"
@@ -12891,7 +12892,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 485
+          "height": 483
         },
         "outputId": "878eaee2-cd22-4787-d706-f19431151386",
         "id": "ktusQEKgYjZi"
@@ -13009,7 +13010,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 716
+          "height": 634
         },
         "outputId": "ace0f0fe-c504-4b7e-dab8-d7ef581121a8",
         "id": "FbF6AgiLYjZj"
@@ -13529,7 +13530,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
