spell check up to section 1.2#initialisation...

--- a/notebooks/data-modeling-images-1.ipynb
+++ b/notebooks/data-modeling-images-1.ipynb
@@ -3057,7 +3057,7 @@
         "id": "ipDqaSyym5RU"
       },
       "source": [
-        "On va maintenant tester les paramètres du même modèles mais en utilisant cette fois les images zoomées. Tous les autres paramètres restent identiques"
+        "On va maintenant tester les paramètres du même modèle, mais en utilisant cette fois les images zoomées. Tous les autres paramètres restent identiques.\n"
       ]
     },
     {
@@ -3066,7 +3066,7 @@
         "id": "RDwiV8lXvmwt"
       },
       "source": [
-        "Changeons la variables **model_id** pour qu'elle corresponde au modèle en cours"
+        "Changeons la variable **model_id** pour qu'elle corresponde au modèle en cours.\n"
       ]
     },
     {
@@ -3095,7 +3095,7 @@
         "id": "ugSFTa5CmwCH"
       },
       "source": [
-        "Cette fois-ci, on importe donc les images zoomées qui ont été produites par le notebook **data_preprocessing_images**"
+        "Cette fois-ci, on importe donc les images zoomées qui ont été produites par le notebook **data_preprocessing_images**.\n"
       ]
     },
     {
@@ -3127,7 +3127,7 @@
         "id": "mFWKNSDumwCI"
       },
       "source": [
-        "On charge maintenant le csv des données modifié par le même notebook. La seule différence par rapport au dataset de la modélisation 1.1, étant l'ajout d'une colonne **imagefile** contenant les chemins relatifs de fichiers.  "
+        "On charge maintenant le CSV des données modifié par le même notebook. La seule différence par rapport au dataset de la modélisation 1.1 est l'ajout d'une colonne **imagefile** contenant les chemins relatifs de fichiers.\n"
       ]
     },
     {
@@ -3500,7 +3500,7 @@
       "source": [
         "On doit refaire la préparation des ensembles de données d'entrainement, de validation et de test, ayant changé de dataset source.\n",
         "\n",
-        "Malrgé le changement de source de données, la préparation reste identique"
+        "Malgré le changement de source de données, la préparation reste identique."
       ]
     },
     {
@@ -3509,7 +3509,7 @@
         "id": "rl5o7d8smwCK"
       },
       "source": [
-        "Créons deux variables **X** et **y** qui vont contenir respectivement, les variables explicatives et la variable cible."
+        "Créons deux variables **X** et **y** qui vont contenir respectivement les variables explicatives et la variable cible.\n"
       ]
     },
     {
@@ -3532,7 +3532,7 @@
       "source": [
         "Commençons par scinder les données en un set d’entraînement (**X_train**,**y_train**) et un set de test (**X_test**,**y_test**).\n",
         "\n",
-        "Ce premier ensemble de test comprend 20% des données choisies aléatoirement mais en respectant la répartition initiale des classes. On veille également à toujours passer le même **random_state** pour s'assurer que la fonction renvoie toujours le même résultat si on doit ré-executer ce notebook plus tard."
+        "Ce premier ensemble de test comprend 20% des données choisies aléatoirement mais en respectant la répartition initiale des classes. On veille également à toujours passer le même **random_state** pour s'assurer que la fonction renvoie toujours le même résultat si on doit ré-executer ce notebook plus tard.\n"
       ]
     },
     {
@@ -3572,7 +3572,7 @@
         "id": "ISJhQX4qmwCL"
       },
       "source": [
-        "Finalement, on réduit encore l'ensemble d'entrainement pour qu'il contienne environ 50% des données de départ."
+        "Finalement, on réduit encore l'ensemble d'entrainement pour qu'il contienne environ 50% des données de départ.\n"
       ]
     },
     {
@@ -3609,7 +3609,7 @@
         "id": "OJ-9u7vsmwCM"
       },
       "source": [
-        "## Initialisation du rapport de modéle"
+        "## Initialisation du rapport de modèle"
       ]
     },
     {
@@ -4161,7 +4161,7 @@
         "id": "j46MeZ7hmwCN"
       },
       "source": [
-        "On peut déja renseigner les informations sur les données sources qu'on utilise"
+        "On peut déjà renseigner les informations sur les données sources qu'on utilise.\n"
       ]
     },
     {
@@ -4197,7 +4197,7 @@
         "id": "cQlSIlGwmwCO"
       },
       "source": [
-        "Commençons par créer une liste ordonnée des classes que l'on va fournir aux générateurs. Plus tard cette liste nous servira à retrouver les classes correspondant aux prédictions car la methode **predict** de keras retourne une matrice dont les colonnes correspondent aux classes dans l'ordre auquel on les a fourni."
+        "Commençons par créer une liste ordonnée des classes que l'on va fournir aux générateurs. Plus tard cette liste nous servira à retrouver les classes correspondant aux prédictions car la méthode **predict** de keras retourne une matrice dont les colonnes correspondent aux classes dans l'ordre auquel on les a fournies.\n"
       ]
     },
     {
